--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 itsy-bitsy-bash-script-repo
 ===========================
 
-This collection of small used scripts is mainly commited to prevent them for getting lost in space.
+This collection of small used scripts is mainly commited to prevent them for getting lost in space and maybe someone out there could use a itsy-bitsy piece of code.
 
 * Example usage
 ---------------
